# pnl_report

./: .gitignore  README.md  calculation_methods.py  data_format.py  methods.py  pnl_methods.py  pyproject.toml  report.py  requirements.txt  setup.py  update.md
.github/workflows/: python-package.yml
examples/: example_profiling.py  example_report.py  example_speed.py  test_data_format.py  test_report.py
pnl_report/: README.md  data_format.py  methods.py  report.py
tests/: test_data_format.py  test_methods.py  test_report.py
