[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pnl_report"
description = "FIFO, LIFO, AVG P&L calculation"
readme = "README.md"
keywords = ["pnl", "report"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

]
dependencies = [
"numpy==1.24.3",
"pandas==2.0.1"
]
dynamic = ["version"]

[tool.setuptools]

[tool.setuptools_scm]
write_to = "_version.py"
