[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pnl_report"
version = '0.1.2'
description = "FIFO, LIFO, AVG P&L calculation"
readme = "README.md"
keywords = ["pnl", "report"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",


]
dependencies = [
"numpy>=1.0.0",
"pandas>=0.25.0"
]

[tool.setuptools]

[tool.setuptools_scm]
write_to = "_version.py"
